--- a/src/App.css
+++ b/src/App.css
@@ -115,13 +115,35 @@ li {
   position: relative;
 }
 .tournament-card .delete {
-  max-width: 32%;
   position: absolute;
   bottom: 1px;
   right: 1px;
 }
 
 .tournament-card:hover {
+  cursor: pointer;
+  background-color: #e7e7e7;
+}
+
+.invite-card {
+  display: grid;
+  grid-template-columns: 12fr 1fr 1fr;
+  border: 1px solid #ddd;
+  padding-left: 5px;
+  background-color: #f3f3f3;
+  justify-content: center;
+  align-items: center;
+}
+.invite-card .button,
+.invite-card .delete {
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: black;
+}
+
+.invite-card:hover {
   cursor: pointer;
   background-color: #e7e7e7;
 }
@@ -154,7 +176,7 @@ form * {
 }
 
 .error {
-  background-color: #e94343;
+  background-color: #ff4242;
 }
 
 /*# sourceMappingURL=App.css.map */
